# brainfuckc

./: CMakeLists.txt  README.md  bfc.c  brainfuckc.c  interpreter.h  interpreter_test.c  list_node.h  list_node_test.c
assets/: helloworld.bf  multiply.bf  sum.bf
